# velorum

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: ARCHITECTURE.md  CHANGELOG.md  PROJECT_CHARTER.md  PROMPT_PROTOCOL.md  SOUL.md
reference/: heartbeat.md  messaging.md  rules.md  skill.md
scripts/: capture_screenshots.py
src/velorum/: __init__.py  __main__.py  brain.py  components.py  config.py  context.py  controller.py  conversations.py  dm.py  experiment.py  following.py  introspection.py  learning.py  ledger.py  main.py  math_utils.py  memory.py  mission.py  orchestrator.py  personality.py  search.py  setup.py  soul.py  strategy.py  submolts.py
src/velorum/arena/: client.py  models.py  register.py  rooms.py
src/velorum/llm/: __init__.py  anthropic.py  base.py  openai.py
src/velorum/moltbook/: __init__.py  auth.py  client.py  models.py  verification.py
src/velorum/prompts/: __init__.py  arena.py  comment.py  decision.py  dm.py  experiment.py  following.py  mission.py  post.py  profiling.py  reflection.py  reply.py  strategy.py  submolt_scoring.py
src/velorum/tui/: __init__.py  app.py  velorum.tcss
src/velorum/tui/widgets/: activity_log.py  mission_panel.py  orchestrator_panel.py  settings_panel.py  soul_editor.py  soul_proposal_modal.py  (+1 more)
tests/: test_arena_client.py  test_arena_rooms.py  test_ban_watch.py  test_bot_targeting.py  test_brain.py  test_context.py  test_controller.py  test_conversations.py  test_conversations_gating.py  test_dm.py  test_following.py  test_learning.py  test_memory.py  test_models.py  test_personality.py  test_submolt_tones.py  test_verification.py
