[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "velorum"
version = "0.1.0"
description = "Autonomous social media agent for Moltbook"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "textual>=0.80",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/velorum"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
